[gd_scene load_steps=12 format=2]

[ext_resource path="res://Source/Fonts/Azonix-1VB0.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Scenes/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "FadeInPause"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.470588, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.470588, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -194.0
margin_top = 16.0
margin_right = 194.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "Pause Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/FadeInPause = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResumeGame" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = -18.5
margin_right = 92.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "RESUME GAME"

[node name="Settings" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = 29.5
margin_right = 64.5
margin_bottom = 66.5
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "SETTINGS"

[node name="QuitToMainMenu" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = 80.0
margin_right = 125.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit to MAIN MENU"

[node name="QuitToDesktop" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 129.5
margin_right = 115.0
margin_bottom = 166.5
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit to desktop"

[node name="SettingsPopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -182.5
margin_right = 152.0
margin_bottom = 182.5

[node name="ColorRect" type="ColorRect" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="SettingsPopup/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="SettingsPopup/ColorRect/Control"]
margin_left = 226.0
margin_top = 81.5
margin_right = 302.0
margin_bottom = 121.5

[node name="Label" type="Label" parent="SettingsPopup/ColorRect/Control"]
margin_left = 23.0
margin_top = 95.0
margin_right = 158.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 6 )
text = "Sound"

[node name="ClosePopup" type="Button" parent="SettingsPopup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.0
margin_top = 2.0
margin_right = -3.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "X"

[node name="SettingsTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="Buttons/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/QuitToMainMenu" to="." method="_on_QuitToMainMenu_pressed"]
[connection signal="pressed" from="Buttons/QuitToDesktop" to="." method="_on_QuitToDesktop_pressed"]
[connection signal="pressed" from="SettingsPopup/ColorRect/Control/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="SettingsPopup/ClosePopup" to="." method="_on_ClosePopup_pressed"]
[connection signal="timeout" from="SettingsTimer" to="." method="_on_SettingsTimer_timeout"]
